@startuml
title Sistema de Integração com Redes Sociais

package api {
  class TwitterApi {
    +postarTweet(mensagem: String)
    +obterEstatisticasTweet(): int[]
  }

  class InstagramApi {
    +publicarFoto(legenda: String, imagemUrl: String)
    +obterEstatisticasPost(): int[]
  }

  class LinkedInApi {
    +compartilharPost(conteudo: String)
    +obterMetricasPost(): int[]
  }

  class TikTokApi {
    +postarVideo(descricao: String, videoUrl: String)
    +obterEstatisticasVideo(): int[]
  }
}

package adapter {
  interface SocialMediaAdapter {
    +publicar(usuario: String, conteudo: Conteudo)
    +getEstatisticas(usuario: String): Estatisticas
  }

  class TwitterAdapter {
    -twitterApi: TwitterApi
  }

  class InstagramAdapter {
    -instagramApi: InstagramApi
  }

  class LinkedInAdapter {
    -linkedinApi: LinkedInApi
  }

  class TikTokAdapter {
    -tikTokApi: TikTokApi
  }

  SocialMediaAdapter <|.. TwitterAdapter
  SocialMediaAdapter <|.. InstagramAdapter
  SocialMediaAdapter <|.. LinkedInAdapter
  SocialMediaAdapter <|.. TikTokAdapter
}

package model {
  class Conteudo {
    -texto: String
    -imagemUrl: String
    +getTexto(): String
    +getImagemUrl(): String
  }

  class Estatisticas {
    -curtidas: int
    -comentarios: int
    -compartilhamentos: int
    +toString(): String
  }
}

package factory {
  class SocialMediaFactory {
    +criar(plataforma: String): SocialMediaAdapter
  }
}

class Main

' ======= RELACIONAMENTOS =======

api.TwitterApi --> adapter.TwitterAdapter
api.InstagramApi --> adapter.InstagramAdapter
api.LinkedInApi --> adapter.LinkedInAdapter
api.TikTokApi --> adapter.TikTokAdapter

adapter.TwitterAdapter --> model.Conteudo
adapter.InstagramAdapter --> model.Conteudo
adapter.LinkedInAdapter --> model.Conteudo
adapter.TikTokAdapter --> model.Conteudo

adapter.TwitterAdapter --> model.Estatisticas
adapter.InstagramAdapter --> model.Estatisticas
adapter.LinkedInAdapter --> model.Estatisticas
adapter.TikTokAdapter --> model.Estatisticas

Main --> factory.SocialMediaFactory
Main --> adapter.SocialMediaAdapter
Main --> model.Conteudo
Main --> model.Estatisticas

@enduml
